# kdtree

./: .gitignore  CMakeLists.txt  Makefile  README.md  SETUP_GUIDE.md  TODO.md  bench.cpp  bench.py  bench_plot.py  bench_results.json  bench_runner.py  bench_scipy.py  example.py  kdtree.h  kdtree_bindings.cpp  kdtree_test.cpp  kdtree_test.py  pre-commit  pre-push  pyproject.toml  setup.py
benchmarks/: blue_noise.cpp  blue_noise.py  cdt.tsv  core.cpp  core.py  core_scipy.py  gpx_dedupe.cpp  gpx_dedupe.py  metrics.cpp  metrics.py
scripts/: prepare_gpx.py
